--- a/scaffolder/.env-template
+++ b/scaffolder/.env-template
@@ -1,6 +1,11 @@
 BACKEND_ROOT_ITEMS=gradle,modules,src,.gitattributes,.gitignore,.editorconfig,build.gradle,docker-compose.yml,Dockerfile,Dockerfile-dev,gradlew,gradlew.bat,settings.gradle,README-run.md,README-functionality.md
 FRONTEND_ROOT_ITEMS=public,src,modules,index.html,package.json,pnpm-lock.yaml,vite.config.ts,tsconfig.json,tsconfig.app.json,tsconfig.node.json,eslint.config.js,tailwind.config.js,Dockerfile,Dockerfile-dev,docker-compose.yml,README.md,.env-template,.dockerignore,.editorconfig,pnpm-workspace.yaml
 REPO_ROOT_ITEMS=.gitignore,AGENTS.md,docker-compose.yml,README.md
+REPOSITORY_ROOT=..
+BACKEND_ROOT=../backend
+FRONTEND_ROOT=../frontend
+BACKEND_MODULES_ROOT=../backend/modules
+FRONTEND_MODULES_ROOT=../frontend/modules
 MODULE_ALIASES=payments:payment,transactions:transaction,identities:identity,ai:ai,wallets:wallet
 AVAILABLE_MODULES=payment,transaction,identity,ai,wallet
 SCAFFOLDER_QUIET_LOGS=true
