--- a/scaffolder/.env-template
+++ b/scaffolder/.env-template
@@ -12,3 +12,4 @@ SCAFFOLDER_QUIET_LOGS=true
 CORS_ORIGIN=*
 RATE_LIMIT_MAX=3
 RATE_LIMIT_WINDOW_MS=30000
+DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/postgres
